# TJU-SwarmIntelligence

llm_swarm/: CLAUDE.md  README.md  parameters.md  pyproject.toml
llm_swarm/checkpoints/: smoke_full_fix.pt  smoke_ippo.pt  smoke_speed_fix.pt
llm_swarm/scripts/: eval_ippo.py  generate_stage_map_images.py  replay_ippo.py  run_stage0_baseline.py  train_ippo.py  train_marl_fixed_map.py
llm_swarm/src/: main.py
llm_swarm/src/agents/: __init__.py  ippo.py
llm_swarm/src/control/: __init__.py  force_allocator.py
llm_swarm/src/envs/: __init__.py  transport_parallel_env.py
llm_swarm/src/planning/: __init__.py  path_planner.py
llm_swarm/src/sim/: controller.py  renderer.py  robot.py  scene_config.py  transport_object.py  world.py
